<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="130dp"
        android:text="Examen de admision 2024"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Formulario de registro:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="Apellidos y nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="Correo electronico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="Clave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="Fecha de nacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="Carrera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="152dp"
        android:text="¿Por qué medio se entero de la convocatoria?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="187dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="189dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.437" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="190dp"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/checkBoxRadio"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/checkbox_radio"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/checkBoxInternet"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:text="@string/checkbox_internet"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRadio"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRadio" />

    <CheckBox
        android:id="@+id/checkBoxAmigo"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:text="@string/checkbox_amigo"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxInternet"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxInternet" />

    <CheckBox
        android:id="@+id/checkBoxPublicidad"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:text="@string/checkbox_publicidad"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAmigo"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAmigo" />

    <RadioGroup
        android:id="@+id/radioGroupCarrera"
        android:layout_width="212dp"
        android:layout_height="133dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radioButtonIngenieriadeSistemas"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/radiobutton_ingenieriadesistemas"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonIngenieriaAmbiental"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/radiobutton_ingenieriaambiental"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonIngenieriaMecanica"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/radiobutton_ingenieriamecanica"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonAdministracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_administracion"
            android:textSize="12sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>